fix collapse container display and carousel wip

--- a/src/components/CardGallery/Carrousel/Carousel.scss
+++ b/src/components/CardGallery/Carrousel/Carousel.scss
@@ -1,12 +1,33 @@
 .carousel-container {
   position: relative;
   width: 100%;
-}
+  height: 40vh;
 
-.carousel-items {
-  width: 100%;
-}
+  img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 0;
+    border-radius: 12px;
+  }
+  .arrows-container {
+    position: relative;
+    border: 1px solid red;
+    // display: flex;
+    // justify-content: space-between;
+    // align-items: ;
+    width: 100%;
+    height: 20%;
+  }
+  .arrow {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    margin: 20px 20px;
+  }
 
-.image-container {
-  object-fit: cover;
+  .arrow-back {
+    left: 0;
+  }
 }
