--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,4 +1,6 @@
 .footer {
+  position: fixed;
+  bottom: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,11 +8,16 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 209px;
+  height: 15vh;
   background-color: black;
+  gap: 20px;
 
   img {
     width: 122px;
     height: 40px;
+  }
+
+  h3 {
+    color: white;
   }
 }
