--- a/src/components/Tags/Tag.scss
+++ b/src/components/Tags/Tag.scss
@@ -4,8 +4,7 @@
   justify-content: center;
   background-color: #ff6060;
   color: white;
-  border-radius: 10px;
-  width: auto;
-  width: 115px;
+  border-radius: 18px;
   height: 25px;
+  padding: 3px 20px;
 }
