--- a/src/pages/Accomodation/Accomodation.scss
+++ b/src/pages/Accomodation/Accomodation.scss
@@ -1,16 +1,11 @@
 .description-container {
+  width: 100%;
   display: flex;
   flex-direction: column;
   color: #ff6060;
-  margin: 0px 100px;
+  padding: 0px 100px;
   gap: 24px;
   margin-bottom: 50px;
-
-  .banner {
-    width: 100%;
-    align-self: center;
-    opacity: unset;
-  }
 
   .details-container {
     display: flex;
